# peter_qa_bot_2

./: .gitignore  README.md  pyproject.toml  tmp_telegram_test.py
deploy/systemd/: peter-qa.service
src/peter/: __init__.py  __main__.py  daemon.py
src/peter/analysis/: batch_candidates.py  defect_taxonomy.py  material_pages.py  role_mismatch.py  stage.py  summary_flags.py  text_defects.py
src/peter/config/: logging.py  settings.py
src/peter/db/: connection.py  migrations_v4.py  schema.py  schema.sql
src/peter/db/repositories/: issue_repo.py  report_issue_repo.py  report_query_repo.py  report_repo.py  site_repo.py  spec_repo.py
src/peter/domain/: enums.py  errors.py  models.py
src/peter/interfaces/cli/: main.py
src/peter/interfaces/email/: assist.py  classifier.py  confirm_commands.py  graph_client.py  llm_reply.py  quarantine_queue.py  recipient_policy.py  report_identity.py  watcher.py
src/peter/interfaces/telegram/: actions.py  bot.py  llm_dialog.py  state.py
src/peter/knowledge/: checklist_builder.py  product_allowlist.py  spec_pack.py  spec_products.py  tds_autosearch.py  tds_library.py  tds_queue.py
src/peter/parsing/: pdf_render.py  pdf_text.py
src/peter/services/: query_service.py  report_service.py  site_service.py  spec_service.py
src/peter/storage/: filestore.py  isolation.py  layout.py  paths.py  quarantine.py
src/peter/util/: hashing.py
src/peter/vision/: image_audit.py  openai_labels.py  openai_vision.py
tests/: test_site_code_validation.py  test_telegram_flow.py  test_version_label_validation.py
