[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peter-qa"
version = "0.1.0"
description = "PETER - Decorative Architectural Coatings QA System"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "KhuselaBC"}]
dependencies = []

[project.scripts]
peter = "peter.interfaces.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
